--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "my-app",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
+    "serve": "ng serve",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron:watch": "wait-on http://localhost:4200 && yarn nodemon   -e ts    --exec \"\" yarn electron-tsc \"\"",
+    "electron-tsc": "tsc index.ts &&  electron .",
+    "electron": "wait-on http://localhost:4200 && yarn electron-tsc",
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +27,9 @@
     "@types/lodash": "^4.14.157",
     "file-saver": "^2.0.2",
     "filesaver": "^0.0.13",
+    "global": "^4.4.0",
     "lodash": "^4.17.19",
+    "nodemon": "^2.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -36,6 +43,10 @@
     "@types/node": "^12.11.1",
     "angular-svg-icon": "^10.0.0",
     "codelyzer": "^6.0.0-next.1",
+    "concurrently": "^5.2.0",
+    "electron": "^9.1.2",
+    "electron-builder": "^22.8.0",
+    "electron-reload": "^1.5.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -46,6 +57,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "wait-on": "^5.1.0"
   }
 }
