--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "my-app",
   "version": "0.0.0",
-  "main": "main.js",
+  "main": "dist/electron/app.js",
   "scripts": {
     "ng": "ng",
     "build": "ng build",
+    "build:electron": "ng build --base-href ./",
     "serve": "ng serve",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron:watch": "wait-on http://localhost:4200 && yarn nodemon   -e ts    --exec \"\" yarn electron-tsc \"\"",
-    "electron-tsc": "tsc index.ts &&  electron .",
-    "electron": "wait-on http://localhost:4200 && yarn electron-tsc",
+    "electron:watch": "yarn nodemon   -e ts    --exec \"\" yarn electron-tsc:dev \"\"",
+    "electron-tsc:dev": " yarn tsc --p electron && env NODE_ENV=dev electron .",
+    "electron-tsc": " yarn tsc --p electron && electron .",
     "start": "ng serve"
   },
   "private": true,
@@ -25,10 +26,12 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "@types/lodash": "^4.14.157",
-    "file-saver": "^2.0.2",
-    "filesaver": "^0.0.13",
+    "build": "^0.1.4",
+    "electron": "^9.1.2",
     "global": "^4.4.0",
     "lodash": "^4.17.19",
+    "ng": "^0.0.0",
+    "ngx-electron": "^2.2.0",
     "nodemon": "^2.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -38,13 +41,13 @@
     "@angular-devkit/build-angular": "~0.1000.1",
     "@angular/cli": "~10.0.1",
     "@angular/compiler-cli": "~10.0.2",
+    "@types/electron": "^1.6.10",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "12.12.21",
     "angular-svg-icon": "^10.0.0",
     "codelyzer": "^6.0.0-next.1",
     "concurrently": "^5.2.0",
-    "electron": "^9.1.2",
     "electron-builder": "^22.8.0",
     "electron-reload": "^1.5.0",
     "jasmine-core": "~3.5.0",
