--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,16 +3,18 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
-    "module": "es2020",
+    "target": "es5",
+    "typeRoots": ["node_modules/@types"],
+    "module": "commonjs",
     "lib": ["es2018", "dom"]
   }
 }
